--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -294,7 +294,7 @@ form.search-bar {
     font-family: $sans-serif;
     margin: 0;
     position: relative;
-    width: 128px;
+    width: 120px;
 
     @include pad();
 
